rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-uigradients__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: UIGradient
  class: UIGradient
  properties:
    AttributesSerialize:
      BinaryString: ""
    Color:
      ColorSequence:
        Keypoints:
          - Time: 0.0
            Color:
              - 1.0
              - 1.0
              - 1.0
          - Time: 1.0
            Color:
              - 1.0
              - 1.0
              - 1.0
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0.0
        - 0.0
    Rotation:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    Transparency:
      NumberSequence:
        Keypoints:
          - Time: 0.0
            Value: 0.5
            Envelope: 0.0
          - Time: 0.20000000298023225
            Value: 0.75
            Envelope: 0.0
          - Time: 0.5
            Value: 0.0
            Envelope: 0.0
          - Time: 0.6000000238418579
            Value: 0.800000011920929
            Envelope: 0.0
          - Time: 1.0
            Value: 1.0
            Envelope: 0.0
  children: []
- referent: referent-1
  name: UIGradient
  class: UIGradient
  properties:
    AttributesSerialize:
      BinaryString: ""
    Color:
      ColorSequence:
        Keypoints:
          - Time: 0.0
            Color:
              - 1.0
              - 1.0
              - 1.0
          - Time: 1.0
            Color:
              - 1.0
              - 1.0
              - 1.0
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0.0
        - 0.0
    Rotation:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    Transparency:
      NumberSequence:
        Keypoints:
          - Time: 0.0
            Value: 0.0
            Envelope: 0.0
          - Time: 0.5
            Value: 1.0
            Envelope: 0.0
          - Time: 1.0
            Value: 0.0
            Envelope: 0.0
  children: []
- referent: referent-2
  name: UIGradient
  class: UIGradient
  properties:
    AttributesSerialize:
      BinaryString: ""
    Color:
      ColorSequence:
        Keypoints:
          - Time: 0.0
            Color:
              - 1.0
              - 1.0
              - 1.0
          - Time: 1.0
            Color:
              - 1.0
              - 1.0
              - 1.0
    Enabled:
      Bool: true
    Offset:
      Vector2:
        - 0.0
        - 0.0
    Rotation:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    Transparency:
      NumberSequence:
        Keypoints:
          - Time: 0.0
            Value: 0.0
            Envelope: 0.0
          - Time: 1.0
            Value: 0.0
            Envelope: 0.0
  children: []

